# Github_cli

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  mkdocs.yml  pyproject.toml  source_code.md
.github/workflows/: docs-deploy.yml  python-lint-test-upload.yml
Github_cli/: cli.py
docs/: faq.md  quick_start.md  source_code.md
gh-star-count/: test_cli.py
gh_star_count/: __main__.py  cli.py
gh_star_count/cli/: count_stars.py  count_stars_cli.py  desc_update.py  status_update.py  test_count_stars.py  test_desc_update.py  test_status_update.py
github_cli/: cli.py  test_cli.py
